--- a/Jogos/quebra-cabeca-t/style.css
+++ b/Jogos/quebra-cabeca-t/style.css
@@ -48,7 +48,7 @@ h1 {
 
 .tile {
     background-size: 400% 400%;
-    border-radius: 0; /* Sem bordas arredondadas pra colar */
+    border-radius: 0;
     font-size: 0;
     display: flex;
     align-items: center;
@@ -73,6 +73,10 @@ h1 {
 
 .tile.empty:hover {
     transform: none;
+}
+
+.tile.selected {
+    border: 2px solid #4db6ac;
 }
 
 .piece-bank {
